Support bundles, keep provider dependencies lazy
Version bumped to 3.0.0 due to the heavily breaking binary and API changes. This was necessarily to progress ForgeGradle 7's development.