@@ -4,17 +4,15 @@
  */
 package net.minecraftforge.accesstransformers.gradle;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 final class Constants {
     private Constants() { }
 
-    static final List<String> AT_DEFAULT_ARGS = Collections.unmodifiableList(Arrays.asList(
+    static final List<String> AT_DEFAULT_ARGS = List.of(
         "--inJar", "{inJar}",
         "--atFile", "{atFile}",
         "--outJar", "{outJar}",
         "--logFile", "{logFile}"
-    ));
+    );
 }
